MFC of r201700 | mckusick | 2010-01-06

This corrects a bug that manifested itself as identifying the last
cylinder group of a UFS1 filesystem as bad. The error was in the check
and not in the cylinder group itself. So even though fsck fixed the
cylinder group correctly, it was still endlessly reported as bad.

This bug first appeared in 8.0 so does not apply to earlier releases.

PR:             141992
Reported by:    Dan Strick